--- a/.gitignore
+++ b/.gitignore
@@ -201,7 +201,13 @@ cython_debug/
 .cursorignore
 .cursorindexingignore
 
+# Model weights
+fastsam-*.pt
+
 # Marimo
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Others
+wound-segmentation/
